Fix headers spacing

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 h1 {
     font-size: 3em;
     font-weight: 300;
-    margin: 0 5vw;
+    margin: 1em 5vw;
 }
 
 h2 {
